--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Listing Books</h1>
 
-<%= form_tag({:action=>"search"}, {:method=>"GET"}) do %>
-  <%= text_field_tag "search[title]" %>
+<%= form_tag(:action=>"search") do %>
+  <%= text_field_tag "search[title]", @search_value %>
   <%= submit_tag "検索" %>
   <%= link_to "リセット", books_path %>
 <% end %>
