--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@book) do |f| %>
+<%= form_for(@book, html: {class: "form-horizontal"}) do |f| %>
   <% if @book.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
@@ -11,31 +11,41 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :isbn %><br>
-    <%= f.text_field :isbn, :maxlength=>13 %>
+    <div class="col-md-3">
+      <%= f.text_field :isbn, :maxlength=>13, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <div class="col-md-3">
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :price %><br>
-    <%= f.number_field :price %>
+    <div class="col-md-3">
+      <%= f.number_field :price, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :publish_id %><br>
-    <%= f.collection_select :publish_id, Publish.all, :id, :publishname %>
+    <div class="col-md-3">
+      <%= f.collection_select :publish_id, Publish.all, :id, :publishname, {}, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :published %><br>
     <%= f.date_select :published %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :cd %><br>
-    <%= f.check_box :cd %>
+    <div class="col-md-2">
+      <%= f.check_box :cd, class: "form-control" %>
+    </div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "登録", class: "btn btn-success" %>
   </div>
 <% end %>
