--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<%= link_to '詳細', @book, class: "btn btn-default" %> |
+<%= link_to '戻る', books_path, class: "btn btn-default" %>
