--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,11 +4,11 @@
 
 <%= form_tag(:action=>"search") do %>
   <%= text_field_tag "search[title]", @search_value %>
-  <%= submit_tag "検索" %>
-  <%= link_to "リセット", books_path %>
+  <%= submit_tag "検索", class: "btn btn-primary" %>
+  <%= link_to "リセット", books_path, class: "btn btn-default" %>
 <% end %>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Isbn</th>
@@ -40,4 +40,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path, class: "btn btn-success" %>
