--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -37,5 +37,5 @@
 <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<%= link_to '更新', edit_book_path(@book), class: "btn btn-success" %> |
+<%= link_to '戻る', books_path, class: "btn btn-default" %>
